Fix svg taking too much space

--- a/src/app/styles/mediaqueries.css
+++ b/src/app/styles/mediaqueries.css
@@ -7,10 +7,10 @@
     font-size: 8rem;
   }
 
-  .home__space {
+  /* .home__space {
     width: 100%;
     height: 100%;
-  }
+  } */
 }
 
 @media screen and (max-width: 1024px) {
